Client generation (#17)
* Refactored project for client generation

* Fixed deployment

* Manage authentication